feat: add unit tests for view model